<?xml version="1.0"?>
<package>
  <name>follow_the_gap</name>
  <version>0.2.0</version>
  <description>
    Follow The Gap algorithm implementation.
    See 'readme.md' for more information.
  </description>

  <maintainer email="klapajar@fel.cvut.cz">Jaroslav Klapálek</maintainer>

  <license>GPLv3</license>

  <author email="anderssp1994@gmail.com">Anders Solberg Pedersen</author>
  <author email="klapajar@fel.cvut.cz">Jaroslav Klapálek</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- build_depend libraries -->
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <!-- build_depend message types -->
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- run_depend libraries -->
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

  <!-- run_depend message types -->
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
